2011-03-20  Ivan Maidanski  <ivmai@mail.ru>

	* blacklst.c (GC_bl_init_no_interiors): New function (the code
	moved from GC_bl_init).
	* blacklst.c (GC_bl_init): Invoke GC_bl_init_no_interiors unless
	GC_all_interior_pointers mode; remove unnecessarily parameter cast
	for GC_scratch_alloc call.
	* include/private/gc_priv.h (GC_bl_init): Move the function
	declaration to misc.c file.
	* misc.c (GC_bl_init_no_interiors): Add a prototype.
	* misc.c (GC_set_all_interior_pointers): Allow values other than 0
	and 1; allow altering GC_set_all_interior_pointers value even
	after GC initialization.
	* obj_map.c (GC_initialize_offsets): Clear GC_valid_offsets and
	GC_modws_valid_offsets if GC_all_interior_pointers is off.
	* misc.c (GC_init): Don't call GC_initialize_offsets() unless
	GC_all_interior_pointers mode.

2011-03-20  Ivan Maidanski  <ivmai@mail.ru>

	* alloc.c (GC_finish_collection): Remove redundant brackets;
	adjust code indentation.
	* blacklst.c (GC_add_to_black_list_normal): Simplify expression
	(to improve code readability).
	* blacklst.c (GC_is_black_listed): Join nested "if" (into a single
	conditional expression); initialize "nblocks" just before the loop
	beginning.
	* misc.c (GC_init): Don't compute initial_heap_sz if GC is already
	initialized.
	* include/private/gc_priv.h (GC_initialize_offsets): Move the
	function declaration to misc.c file.
	* obj_map.c (GC_initialize_offsets): Remove offsets_initialized
	static variable since the function is called only once.
	* tests/middle.c: Include "gc.h" instead of <gc.h>; expand all
	tabs to spaces; adjust code indentation; replace the K&R-style
	function definition with the ANSI C one.
	* tests/smash_test.c: Ditto.
	* tests/middle.c (main): Use setter for GC_all_interior_pointers;
	adjust printf format specifier (and cast the value passed to).

2011-03-15  Ivan Maidanski  <ivmai@mail.ru>

	* doc/README.macros (SMALL_CONFIG, LARGE_CONFIG): Refine the
	documentation.